<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rlReportABug"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/btSendReport"
        android:layout_margin="8dp"
        android:isScrollContainer="false">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvBugReportMain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textview_report_bug_main"
                android:textSize="@dimen/abc_text_size_medium_material" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_text_view"
                android:textSize="@dimen/abc_text_size_medium_material" />

            <EditText
                android:id="@+id/etBugReportName"
                android:layout_width="fill_parent"
                android:layout_height="48dp"
                android:hint="@string/name_edittext_hint"
                android:inputType="textPersonName" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textview_report_bug_describe"
                android:textSize="@dimen/abc_text_size_medium_material" />

            <EditText
                android:id="@+id/etBugReportDescription"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_description"
                android:inputType="textMultiLine|textCapSentences" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textview_report_bug_steps"
                android:textSize="@dimen/abc_text_size_medium_material" />

            <EditText
                android:id="@+id/etReportBugSteps"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_steps"
                android:inputType="textMultiLine|textCapSentences" />

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/btSendReport"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_above="@+id/imageViewBottomBanner"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:onClick="onSubmitReport"
        android:text="@string/submit_bug_report" />

    <ImageView
        android:id="@+id/imageViewBottomBanner"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bottombanner"
        android:contentDescription="bottom banner" />

</RelativeLayout>