<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rlContact"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/btSendEmail"
        android:layout_margin="8dp"
        android:isScrollContainer="false"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvContactMain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="@string/contact_textview_main"
                android:textIsSelectable="true"
                android:textSize="@dimen/abc_text_size_medium_material" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_text_view"
                android:textSize="@dimen/abc_text_size_medium_material" />

            <EditText
                android:id="@+id/etContactName"
                android:layout_width="fill_parent"
                android:layout_height="48dp"
                android:hint="@string/name_edittext_hint"
                android:inputType="textPersonName" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/message_text_view"
                android:textSize="@dimen/abc_text_size_medium_material" />

            <EditText
                android:id="@+id/etContactMessage"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/message_edittext_hint"
                android:inputType="textMultiLine|textCapSentences" />

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/btSendEmail"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_above="@+id/imageViewBottomBanner"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:onClick="onSendEmail"
        android:text="@string/send_email_button" />

    <ImageView
        android:id="@+id/imageViewBottomBanner"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bottombanner" />

</RelativeLayout>