<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rlRedeemOffer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:isScrollContainer="false">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/tvRedeemInfo"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/abc_text_size_medium_material" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview_redeem_confirm_password"
                android:textSize="@dimen/abc_text_size_medium_material" />

            <EditText
                android:id="@+id/etRedeemPassword"
                android:layout_width="fill_parent"
                android:layout_height="48dp"
                android:hint="@string/textview_redeem_enter_password"
                android:inputType="numberPassword" />

            <TextView
                android:id="@+id/tvPassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:textColor="#ffc91c15"
                android:textSize="@dimen/abc_text_size_large_material" />

        </LinearLayout>


    </ScrollView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_above="@id/imageViewBottomBanner"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:onClick="onRedeemClick"
        android:text="@string/button_redeem" />

    <ImageView
        android:id="@+id/imageViewBottomBanner"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bottombanner" />

</RelativeLayout>